# ai-code-gate

./: .pre-commit-config.yaml  .secrets.baseline  README.md  action.yml  pyproject.toml
.github/: gate-requirements.txt
.github/workflows/: ai-gate.yml
docs/: index.html
fuzz/: fuzz_example.py  targets.txt
scripts/: detect_fuzz_targets.py  measure_js_complexity.py  notify.py  precommit_complexity.py  run_fuzz.py  score.py  score_store.py
semgrep-rules/: ai-antipatterns.yml  js-antipatterns.yml
tests/: test_detect_fuzz_targets.py  test_notify.py  test_score.py  test_score_store.py
