[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "ai-code-gate"
version = "0.1.0"
description = "CI quality gate that blocks low-quality AI-generated code"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
    "lizard>=1.17",
    "semgrep>=1.68",
    "coverage[toml]>=7.4",
    "pytest>=8.0",
    "atheris>=2.3; sys_platform == 'linux'",
]

# ---------------------------------------------------------------------------
# Coverage configuration
# Branch coverage is required — line-only coverage is insufficient for
# catching AI-generated code that skips edge-case branches.
# ---------------------------------------------------------------------------
[tool.coverage.run]
branch = true
source = ["."]
omit = [
    "tests/*",
    "scripts/*",
    "fuzz/*",
    "setup.py",
    "**/__pycache__/*",
    ".venv/*",
    "venv/*",
]

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "\\.\\.\\.",
]

[tool.coverage.json]
output = "coverage.json"
pretty_print = true

# ---------------------------------------------------------------------------
# Pytest configuration
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_functions = ["test_*"]
addopts = "--tb=short -q"

# ---------------------------------------------------------------------------
# Ruff (linter + formatter)
# ---------------------------------------------------------------------------
[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["E501"]  # line length handled by formatter

# ---------------------------------------------------------------------------
# AI gate threshold configuration
# These values are read by score.py when --config pyproject.toml is passed.
# ---------------------------------------------------------------------------
[tool.ai-gate]
threshold = 70

[tool.ai-gate.complexity]
excellent = 5
acceptable = 10
poor = 20

[tool.ai-gate.coverage]
excellent = 90
acceptable = 70
poor = 40

[tool.ai-gate.antipatterns]
excellent = 0
acceptable = 2
poor = 5
